# kursachv3.0

./: .gitignore  CMakeLists.txt  README.md  analysisworker.cpp  analysisworker.h  analytics.cpp  analytics.h  fileinputwindow.cpp  fileinputwindow.h  fileinputwindow.ui  instructionwindow.cpp  instructionwindow.h  instructionwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  resultcache.cpp  resultcache.h  textinputwindow.cpp  textinputwindow.h  textinputwindow.ui  wordanalyzer.cpp  wordanalyzer.h  wordgraph.cpp  wordgraph.h
